# tsoha-dialogue

./: .gitignore  README.md  pyproject.toml
src/: app.py  db.py  message_manager.py  route_context.py  routes.py  setup.py  site_config.py  tables.sql  topic_manager.py  user_manager.py
src/static/: dialogue.css
src/templates/: index.html  layout.html  logon.html  new_message.html  new_topic.html  posts.html  register.html  reply.html  show_message.html
